--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-data": "^4.4"
+        "ramsey/uuid": "^4.7",
+        "spatie/laravel-data": "^4.4",
+        "your-app-rocks/eloquent-uuid": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
