feat: add initial version of charts for questions

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^1.0.15",
-        "@vitejs/plugin-vue": "^5.0.4"
+        "@vitejs/plugin-vue": "^5.0.4",
+        "apexcharts": "^3.49.2"
     }
 }
